# stage2a

./: AVANt.txt  README.md  get_sig.py  prompt_context_ws.txt
dronecan_env/share/applications/: DroneCAN GUI Tool.desktop
install/: local_setup.sh  setup.sh
install/allan_variance_ros2/share/allan_variance_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ntrip/include/ntrip_client/: ntrip_client.h  rtcm_parser.h
install/ntrip/lib/ntrip/: ntrip
install/ntrip/share/ntrip/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ntrip/share/ntrip/cmake/: ntripConfig-version.cmake  ntripConfig.cmake
install/ntrip/share/ntrip/config/: ntrip-param.yaml
install/ntrip/share/ntrip/environment/: ament_prefix_path.dsv  path.dsv
install/ntrip/share/ntrip/launch/: ntrip_launch.py
install/olive_networking/share/olive_networking/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/plateform_bringup/share/plateform_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/plateform_description/share/plateform_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/platform_bringup/share/platform_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/platform_description/share/platform_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/platform_interfaces/share/platform_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/platform_processing/lib/platform_processing/: imu_sync_node  mock_imu_node.py
install/platform_processing/share/platform_processing/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/realsense2_camera/include/: align_depth_filter.h  base_realsense_node.h  constants.h  context_singleton_wrapper.h  dynamic_params.h  gl_window.h  image_publisher.h  named_filter.h  pointcloud_filter.h  profile_manager.h  realsense_node_factory.h  ros_node_base.h  ros_param_backend.h  ros_sensor.h  ros_utils.h  sensor_params.h
install/realsense2_camera/lib/realsense2_camera/: realsense2_camera_node
install/realsense2_camera/share/realsense2_camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/realsense2_camera_msgs/share/realsense2_camera_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/realsense2_description/share/realsense2_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/uavcan_bridge/lib/uavcan_bridge/: dronecan_bridge_node
install/uavcan_bridge/share/uavcan_bridge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/xsens_mti_ros2_driver/lib/xsens_mti_ros2_driver/: xsens_mti_node
install/xsens_mti_ros2_driver/share/xsens_mti_ros2_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/hardware/uavcan_bridge/: CMakeLists.txt  package.xml
src/hardware/uavcan_bridge/src/: dronecan_bridge_component.cpp
src/olive_networking/: CMakeLists.txt
src/olive_networking/config/: fastdds_profiles.xml
src/olive_networking/rules/: 99-olive-networking.rules
src/olive_networking/scripts/: imu_relay.py  install_rules.sh  olive_network_configuration.sh  setup_imu_namespace.sh
src/platform_bringup/: CMakeLists.txt
src/platform_bringup/config/: ekf.yaml  fusioncore.yaml  inekf.yaml  olive_bridge.yaml  ukf.yaml
src/platform_bringup/launch/: calibration_hardware.launch.py  can_allocator.py  offline_fusion.launch.py  olive_bridge.launch.py  record_dataset.launch.py  system.launch.py  test_hflow.launch.py  test_olix_cam.launch.py  test_olix_imu.launch.py  test_sync.launch.py
src/platform_description/: CMakeLists.txt
src/platform_description/launch/: display.launch.py
src/platform_description/urdf/: sensor_platform.urdf.xacro
src/platform_interfaces/: CMakeLists.txt
src/platform_processing/: CMakeLists.txt  package.xml
src/platform_processing/scripts/: mock_imu_node.py
src/platform_processing/src/: imu_sync_component.cpp
(+583 files in other folders)
